v 0.0.1, for godot 3.2.2.beta

--- a/android-plugin/src/main/AndroidManifest.conf
+++ b/android-plugin/src/main/AndroidManifest.conf
@@ -1,5 +1,6 @@
 [application_attribs]
 android:hardwareAccelerated="true"
+android:networkSecurityConfig="@xml/network_security_config"
 
 [user_permissions]
 <uses-permission android:name="android.permission.INTERNET" />
@@ -9,3 +10,4 @@ android:hardwareAccelerated="true"
 
 [application]
 <meta-data android:name="applovin.sdk.key" android:value="7eXO4D1woL_J68T6Z-_kfl6E9y4ulNti-AJEe9Bna63RLLxA7MyWWs61HxtE2AgQ_dsk8VscMcKvRuNkxqQnzV"/>
+<meta-data android:name="com.google.android.gms.ads.AD_MANAGER_APP" android:value="true"/>
