make iOS framework

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 *.d
 *.framework
 ios-plugin/.sconsign.dblite
+ios-framework/build/*
+ios-framework/gdnative_ios.xcodeproj/project.xcworkspace/xcuserdata
