update SDK upto v 10.0.1

--- a/applovinmax-google.json
+++ b/applovinmax-google.json
@@ -1,9 +1,17 @@
 {
   "name": "applovinmax-google",
+  "display_name": "AppLovin-Max Google",
   "description": "Google (AdMob) adapter for AppLovin-Max plugin.",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "godot_version": "3.3.0",
   "license": "MIT",
   "url": "https://github.com/DrMoriarty/godot-applovinmax.git",
+  "category": "misc",
+  "author": {
+    "name": "DrMoriarty",
+    "url": "https://github.com/DrMoriarty",
+    "donate": "https://ko-fi.com/drmoriarty"
+  },
   "dependencies": [
     "applovinmax"
   ],
